upd: naming convention of nested columns
Changed convention N2-N2-8 to N2_N2-8 to better identify nested (N2)
columns.

--- a/LayoutControls/ToolboxesConfig.config
+++ b/LayoutControls/ToolboxesConfig.config
@@ -22,8 +22,8 @@
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 33% + 33% + 33%" description="3 Columns (col-4 + col-4 + col-4)" cssClass="sfL33_34_33" layoutTemplate="~/LayoutControls/twbs3/twbs3_3col_col4-4-4.ascx" visibilityMode="None" name="twbs3_3col_col4-4-4" />
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 33% + 33% + 33%" description="3 Columns (col-3 + col-6 + col-3)" cssClass="sfL25_50_25" layoutTemplate="~/LayoutControls/twbs3/twbs3_3col_col3-6-3.ascx" visibilityMode="None" name="twbs3_3col_col3-6-3" />
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 4x 25% " description="4 Columns (col-3 + col-3 + col-3 + col-3)" cssClass="sfL25_25_25_25" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_col3-3-3-3.ascx" visibilityMode="None" name="twbs3_4col_col3-3-3-3" />
-        <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 67%" description="3 Columns ((col-2 + col-2) + col-8)" cssClass="sfL33_67" layoutTemplate="~/LayoutControls/twbs3/twbs3_3col_colN2-N2-8.ascx" visibilityMode="None" name="twbs3_3col_colN2-N2-8" />
-        <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 2x 25%" description="4 Columns ((col-2 + col-2) + col-4 + col-4)" cssClass="sfL33_34_33" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_colN2-N2-4-4.ascx" visibilityMode="None" name="twbs3_4col_colN2-N2-4-4" />
+        <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 67%" description="3 Columns ((col-2 + col-2) + col-8)" cssClass="sfL33_67" layoutTemplate="~/LayoutControls/twbs3/twbs3_3col_colN2_N2-8.ascx" visibilityMode="None" name="twbs3_3col_colN2_N2-8" />
+        <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 2x 25%" description="4 Columns ((col-2 + col-2) + col-4 + col-4)" cssClass="sfL33_34_33" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_colN2_N2-4-4.ascx" visibilityMode="None" name="twbs3_4col_colN2_N2-4-4" />
       </tools>
     </add>
   </sections>
