Upd: Additional nested layout for twbs 3.0
Additional 4x col-3 nested in 2x col-6 layoutcontrol

--- a/LayoutControls/ToolboxesConfig.config
+++ b/LayoutControls/ToolboxesConfig.config
@@ -24,6 +24,7 @@
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 4x 25% " description="4 Columns (col-3 + col-3 + col-3 + col-3)" cssClass="sfL25_25_25_25" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_col3-3-3-3.ascx" visibilityMode="None" name="twbs3_4col_col3-3-3-3" />
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 67%" description="3 Columns ((col-2 + col-2) + col-8)" cssClass="sfL33_67" layoutTemplate="~/LayoutControls/twbs3/twbs3_3col_colN2_N2-8.ascx" visibilityMode="None" name="twbs3_3col_colN2_N2-8" />
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (2 + 2) + 2x 25%" description="4 Columns ((col-2 + col-2) + col-4 + col-4)" cssClass="sfL33_34_33" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_colN2_N2-4-4.ascx" visibilityMode="None" name="twbs3_4col_colN2_N2-4-4" />
+        <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB (3 + 3) + (3 + 3) " description="4 Columns ((col-3 + col-3) + (col-3 + col-3))" cssClass="sfL25_25_25_25" layoutTemplate="~/LayoutControls/twbs3/twbs3_4col_colN3_N3-N3_N3.ascx" visibilityMode="None" name="twbs3_4col_colN3_N3-N3_N3" />
       </tools>
     </add>
   </sections>
