upd: Bootstrap to v.3.1.1
Update bootstrap to v3.1.1 and tested with Sitefinity v7

--- a/LayoutControls/ToolboxesConfig.config
+++ b/LayoutControls/ToolboxesConfig.config
@@ -13,7 +13,7 @@
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB  4x 25%" description="4 Columns (span3 + span3 + span3 + span3)" cssClass="sfL25_25_25_25" layoutTemplate="~/LayoutControls/twbs2/twbs2_4col_span3-3-3-3.ascx" visibilityMode="None" name="twbs2_4col_span3-3-3-3" />
       </tools>
     </add>
-    <add enabled="True" title="Bootstrap 3.0" description="Twitter Bootstrap v3.0 compatible layout regions" name="Bootstrap3">
+    <add enabled="True" title="Bootstrap 3.x" description="Twitter Bootstrap v3.x compatible layout regions" name="Bootstrap3">
       <tools>
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 100%" description="1 Column (col-12)" cssClass="sfL100" layoutTemplate="~/LayoutControls/twbs3/twbs3_1col_col12.ascx" visibilityMode="None" name="twbs3_1col_col12" />
         <add enabled="True" type="Telerik.Sitefinity.Web.UI.LayoutControl" title="TB 33% + 67%" description="2 Columns (col-4 + col-8)" cssClass="sfL33_67" layoutTemplate="~/LayoutControls/twbs3/twbs3_2col_col4-8.ascx" visibilityMode="None" name="twbs3_2col_col4-8" />
